--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
       <li><a href="#setup">セットアップ</a></li>
       <li><a href="#pledge">CF支援プラン</a></li>
       <li><a href="#form">プレオーダー通知登録</a></li>
+      <li><a href="https://itunes.apple.com/jp/app/snowcookie-smart-ski-tracker/id1317036227?mt=8" target="_blank">App Store</a></li>
     </ul>
     <ul class="subMenu small ae-3">
       <li class="opacity-8"><a href="https://snowcookiesports.com/pages/about-us" target="_blank">About Us</a></li>
@@ -994,7 +995,12 @@
       </ul>
     </div>
   </div>
-
+  <div class="sections compact hidden">
+    <div class="left">
+    </div>
+    <div class="right">
+    </div>
+  </div>
 </nav>
 
 
