--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
                   <li class="opacity-8">スマートスキーシステム<br>Swiss Black Editon ×1</li>
                 </ul>
               </div>
-              <a href="#" class="button blue  wide cropSides cropBottom ae-7">間もなく販売開始</a>
+              <a href="#form" class="button blue  wide cropSides cropBottom ae-7">間もなく販売開始</a>
             </li>
             <li class="col-3-12 ae-4">
               <h3>snowcookie<br>サポートプランB</h3>
@@ -907,7 +907,7 @@
                   <li class="opacity-8">スマートスキーシステム<br>Yellow Editon ×1</li>
                 </ul>
               </div>
-              <a href="#" class="button blue  wide cropSides cropBottom ae-8">間もなく販売開始</a>
+              <a href="#form" class="button blue  wide cropSides cropBottom ae-8">間もなく販売開始</a>
             </li>
             <li class="col-3-12 ae-5">
               <h3>snowcookie<br>サポートプランC</h3>
@@ -919,7 +919,7 @@
                   <li class="opacity-8">カスタムレーシングスーツ(Snowcookie用チェストポケット&iPhone用ポケット付き)</li>
                 </ul>
               </div>
-              <a href="#" class="button blue  wide cropSides cropBottom ae-9">間もなく販売開始</a>
+              <a href="#form" class="button blue  wide cropSides cropBottom ae-9">間もなく販売開始</a>
             </li>
             <li class="col-3-12 ae-5">
               <h3>snowcookie<br>サポートプランD</h3>
@@ -931,7 +931,7 @@
                   <li class="opacity-8">カスタムレーシングスーツ(Snowcookie用チェストポケット&iPhone用ポケット付き)</li>
                 </ul>
               </div>
-              <a href="#" class="button blue  wide cropSides cropBottom ae-9">間もなく販売開始</a>
+              <a href="#form" class="button blue  wide cropSides cropBottom ae-9">間もなく販売開始</a>
             </li>
           </ul>
         </div> 
