--- a/index.html
+++ b/index.html
@@ -360,11 +360,9 @@
   <div class="content">
     <div class="container">
       <div class="wrap">
-        <div class="fix-10-12">
           <div class="embedVideo popupContent">
             <iframe src="https://www.youtube.com/embed/x7s2HNZS2dY?rel=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
-        </div>
       </div>
     </div>
   </div>
@@ -619,14 +617,15 @@
         <div class="fix-8-12">
           <h1 class="ae-1 fromCenter">製品に同梱されているもの</h1>
           <p class="ae-2">Snowcookieはウィンターシーズンにあらゆる場所へ持ち歩いてお楽しみいただけるよう、軽量なトラベルキットの形でお届けします</p>
-
-          <!-- slider -->
-          <ul class="slider rounded margin-top-6 autoHeight clickable ae-1" data-slider-id="22-12">
-            <li class="selected"><img src="assets/img/Snowcookie_Unboxing_1920x1080.jpg" class="wide" alt="Image"/></li>
-          </ul>
-        
-        
       	</div>
+
+      	<div class="fix-10-12 ae-5">
+          <ul class="slider rounded margin-top-3 clickable ae-1" data-slider-id="22-12">
+        	<div class="slider rounded ae-1 slider margin-top-3 autoHeight clickable">
+          		<img class="margin-top-2 rounded" src="assets/img/Snowcookie_Unboxing_1920x1080.jpg" data-action="zoom" width="1028"/>
+        	</div>
+    	  </ul>
+        </div>
 
       </div>
     </div>
@@ -957,7 +956,7 @@
             <div class="ae-3　margin-top-8"><p><span class="tiny opacity-8">下記フォームよりメールアドレスをご登録いただいたお客様には、後日クラウドファンディング支援募集開始をお知らせさせていただきます</p></div>
             <div>
 	            <!-- Be sure you keep this form layout as it is. You can change the rest -->
-	            <form class="slides-form ae-2 fix-4-12 done" id="subscribe" novalidate="true">
+	            <form class="slides-form ae-4 fix-4-12" id="subscribe" novalidate="true">
 	              <input type="email" value="" name="EMAIL" id="subscribe-email" placeholder="通知を受け取るメールアドレス" class="wide">
 	              <button type="submit" value="" name="subscribe-submit" class="wide button blue">プレオーダー開始通知を受け取る</button>
 	              <label for="subscribe-email" class="subscribe-message"></label>
