--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 
             </li>
             <li class="col-6-12">
-              <img class="ae-4" width="405" src="assets/img/02_ski_analysis.png" alt="iPhones Thumbnail" data-action="zoom"/>
+              <img class="ae-4" width="405" src="assets/img/iphone-3d.png" alt="iPhones Thumbnail" data-action="zoom"/>
             </li>
           </ul>
         </div>
@@ -406,7 +406,7 @@
               <p class="ae-2 fromLeft"><span class="opacity-8">See what your skiing is made of</span></p>
             </li>
             <li class="col-6-12">
-              <img class="ae-4" width="605" src="assets/img/WHOLE_SET_iPhone-X-Mockup@1x.png" alt="iPhones Thumbnail" data-action="zoom"/>
+              <img class="ae-4" width="805" src="assets/img/WHOLE_SET_iPhone-X-Mockup@1x.png" alt="iPhones Thumbnail" data-action="zoom"/>
             </li>
           </ul>
         </div>
@@ -426,11 +426,20 @@
         <div class="fix-12-12">
           <ul class="flex fixedSpaces verticalCenter reverse">
             <li class="col-6-12 left middle">
-              <h1 class="ae-1 fromLeft">スキー体験の<b>さらなる探求、さらなる改善へ</b></h1>
+              <h1 class="ae-1 fromLeft">スキー体験の<b>さらなる体験探求、さらなる改善へ</b></h1>
               <p class="ae-2 fromLeft"><span class="opacity-8">Get AI-powered feedback straight from your phone</span></p>
             </li>
             <li class="col-6-12">
-              <img class="ae-4" width="405" src="assets/img/05_ski_comparison@0.5x.png" alt="iPhones Thumbnail" data-action="zoom"/>
+              <div class="fix-4-12 center">
+                <ul class="slider clickable ae-1 fromAbove" data-slider-id="26">
+                  <li class="selected"><img src="assets/img/iphone-run.png" class="wide"/></li>
+                  <li><img src="assets/img/iphone-run2.png" class="wide" /></li>
+                </ul>
+                <ul class="controller dots ae-3 fromCenter" data-slider-id="26">
+                  <li class="dot selected"></li>
+                  <li class="dot"></li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
@@ -449,8 +458,27 @@
           
         <div class="fix-12-12">
           <ul class="flex noSpaces verticalCenter">
-            <li class="col-6-12 left ae-1">
-              <img class=" margin-bottom-3" src="assets/img/webpage_screens_6_600x.gif" width="444" alt="Snowcookie Image"/>
+            <li class="col-6-12">
+              <div class="fix-4-12 center">
+                <ul class="slider clickable ae-1 fromAbove" data-slider-id="2">
+                  <li class="selected"><img src="assets/img/iphone-run1.png" class="wide"/></li>
+                  <li><img src="assets/img/iphone-run3.png" class="wide" /></li>
+                  <li><img src="assets/img/iphone-run4.png" class="wide" /></li>
+                  <li><img src="assets/img/iphone-run5.png" class="wide" /></li>
+                  <li><img src="assets/img/iphone-run6.png" class="wide" /></li>
+                  <li><img src="assets/img/iphone-run7.png" class="wide" /></li>
+                  <li><img src="assets/img/iphone-run8.png" class="wide" /></li>
+                </ul>
+                <ul class="controller dots ae-3 fromCenter" data-slider-id="2">
+                  <li class="dot selected"></li>
+                  <li class="dot"></li>
+                  <li class="dot"></li>
+                  <li class="dot"></li>
+                  <li class="dot"></li>
+                  <li class="dot"></li>
+                  <li class="dot"></li>
+                </ul>
+              </div>
             </li>
             <li class="col-6-12 left">
               <h1 class="ae-2">snowcookieにできること</h1>
@@ -528,12 +556,12 @@
     <div class="container">
       <div class="wrap">
       
-        <div class="fix-9-12 toCenter">
+        <div class="fix-10-12 toCenter">
           <h1 class="ae-1">コラボレーションパートナー</h1>
-          <p class="ae-2"><span class="opacity-8">snowcookieの技術･製品開発や、新しいスキーライフの提案において、様々なパートナーとのコラボレーションを推進しています</span></p>
+          <p class="ae-2"><span class="opacity-8">技術･製品開発や、新しいスキーライフの提案において、様々なパートナーとのコラボレーションを推進しています</span></p>
 
           <!-- remove class tintLogos class to disable color change of the logo images -->
-          <ul class="flex grid-68 tintLogos equal equalMobile">
+          <ul class="flex grid-68 tintLogos equal equalMobile margin-top-6">
             <li class="col-3-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2">
               <div class="table wide equalElement ae-3">
                 <div class="cell"><img width="84" src="assets/img/brand-68-audi.png" alt="Audi"/>
@@ -581,22 +609,22 @@
             <li class="col-6-12 ae-3 equalElement">
               <i class="material-icons">3d_rotation</i>
               <h3>3Dトラッキング</h3>
-              <p class="tiny opacity-6 fix-4-12 toLeft">ボディとスキー板の3つのセンサーが、あなたのiPhone内蔵センサ機能を拡張します</p>
+              <p class="tiny opacity-8 fix-4-12 toLeft">ボディとスキー板の3つのセンサーが、あなたのiPhone内蔵センサ機能を拡張します</p>
             </li>
             <li class="col-6-12 ae-4 equalElement">
               <i class="material-icons">blur_on</i>
               <h3>高精度計測</h3>
-              <p class="tiny opacity-6 fix-4-12 toLeft">先進モーショントラッキング技術が、1秒に50回ものデータポイントを計測します</p>
+              <p class="tiny opacity-8 fix-4-12 toLeft">先進モーショントラッキング技術が、1秒に50回ものデータポイントを計測します</p>
             </li>
             <li class="col-6-12 ae-5 equalElement">
               <i class="material-icons">filter_tilt_shift</i>
               <h3>超軽量</h3>
-              <p class="tiny opacity-6 fix-4-12 toLeft">各センサーはわずか40gにも関わらず、どんなライドにも耐えられる耐久性があります</p>
+              <p class="tiny opacity-8 fix-4-12 toLeft">各センサーはわずか40gにも関わらず、どんなライドにも耐えられる耐久性があります</p>
             </li>
             <li class="col-6-12 ae-6">
               <i class="material-icons">battery_charging_full</i>
               <h3>ワイヤレス充電</h3>
-              <p class="tiny opacity-6 fix-4-12 toLeft">誘導充電式リチウムイオンバッテリーで2日以上の動作が可能です</p>
+              <p class="tiny opacity-8 fix-4-12 toLeft">誘導充電式リチウムイオンバッテリーで2日以上の動作が可能です</p>
             </li>
           </ul>
         </div>
@@ -796,7 +824,7 @@
           <h1 class="ae-1 fromLeft">snowcookieセットアップ</h1>
           <p class="ae-2 fromLeft"><span class="opacity-8">snowcookieのセットアップは直感的で簡単に行うことができます</span></p>
           <div class="videoThumbnail margin-bottom-6 noShadow noTint ae-3 popupTrigger" data-popup-id="87-16">
-            <img width="722" src="assets/img/iphone-87.png" alt="Keyboard"/>
+            <img width="722" src="assets/img/iphone-81.png" alt="Keyboard"/>
           </div>
           <ul class="grid fixedSpaces left box-87 equal equalMobile" >
             <li class="col-4-12 col-tablet-1-2 col-phone-1-1 equalElement margin-top-1 ae-5 fromCenter">
@@ -826,11 +854,9 @@
   <div class="content">
     <div class="container">
       <div class="wrap">
-        <div class="fix-10-12">
           <div class="embedVideo popupContent">
             <iframe src="https://www.youtube.com/embed/GBJIjTzjl3Q?rel=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
-        </div>
       </div>
     </div>
   </div>
