--- a/index copy.html
+++ b/index copy.html
@@ -322,10 +322,10 @@
       <li class="opacity-8"><a href="https://snowcookiesports.com/pages/customer-support" target="_blank">Contact Us</a></li>
     </ul>
     <ul class="social ae-4">
-      <li class="opacity-8"><a href="https://www.facebook.com/ridesnowcookie" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
+      <li class="opacity-8"><a href="https://www.facebook.com/snowcookiejapan" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
       <li class="opacity-8"><a href="https://twitter.com/ridesnowcookie" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
-      <li class="opacity-8"><a href="https://www.instagram.com/ridesnowcookie" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></li>
-      <li class="opacity-8"><a href="https://www.youtube.com/channel/UCN_DzWGNTC7j0TXU28UtxhA" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#youtube"></use></svg></a></li>
+      <li class="opacity-8"><a href="https://www.instagram.com/snowcookiejapan" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></li>
+      <li class="opacity-8"><a href="https://www.youtube.com/channel/UCT289AMSz905O0hE7-OoOBw" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#youtube"></use></svg></a></li>
     </ul>
   </div>
 </nav>
@@ -361,7 +361,7 @@
     <div class="container">
       <div class="wrap">
           <div class="embedVideo popupContent">
-            <iframe src="https://www.youtube.com/embed/x7s2HNZS2dY?rel=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/xw7xNVhaslc?rel=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
       </div>
     </div>
@@ -543,7 +543,7 @@
     <div class="container">
       <div class="wrap">
           <div class="embedVideo popupContent">
-            <iframe src="https://www.youtube.com/embed/x7s2HNZS2dY?rel=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/xw7xNVhaslc?rel=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
       </div>
     </div>
@@ -855,7 +855,7 @@
     <div class="container">
       <div class="wrap">
           <div class="embedVideo popupContent">
-            <iframe src="https://www.youtube.com/embed/GBJIjTzjl3Q?rel=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/aWvkPgfK4zk?rel=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
       </div>
     </div>
@@ -893,11 +893,9 @@
   <div class="content">
     <div class="container">
       <div class="wrap">
-        <div class="fix-10-12">
           <div class="embedVideo popupContent">
-            <iframe src="https://www.youtube.com/embed/qflTzFQPdg4?rel=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/WE0tXORyhb8?rel=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
-        </div>
       </div>
     </div>
   </div>
@@ -1013,10 +1011,10 @@
         <li><a href="#setup">セットアップ</a></li>
         <li><a href="#pledge">クラウドファンディング支援プラン</a></li>
         <li><a href="#form">プレオーダー通知登録</a></li>
-        <li class="cropRight"><a href="https://www.facebook.com/ridesnowcookie" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
+        <li class="cropRight"><a href="https://www.facebook.com/snowcookiejapan" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
         <li class="cropRight"><a href="https://twitter.com/ridesnowcookie" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
-        <li class="cropRight"><a href="https://www.instagram.com/ridesnowcookie" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></li>
-        <li class="cropRight"><a href="https://www.youtube.com/channel/UCN_DzWGNTC7j0TXU28UtxhA" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#youtube"></use></svg></a></li>
+        <li class="cropRight"><a href="https://www.instagram.com/snowcookiejapan" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></li>
+        <li class="cropRight"><a href="https://www.youtube.com/channel/UCT289AMSz905O0hE7-OoOBw" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#youtube"></use></svg></a></li>
       </ul>
     </div>
   </div>
