--- a/index copy.html
+++ b/index copy.html
@@ -87,6 +87,8 @@
 
 	<!-- Fonts and Material Icons -->
 	<link rel="stylesheet" as="font" href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,600,800|Montserrat:200|Montserrat:400|Material+Icons"/>
+	<link rel="icon" type="image/x-icon" href="./favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon-180x180.png">　
 	<style type="text/css">
 		.slides,
 		.slides p {
