--- a/index copy.html
+++ b/index copy.html
@@ -10,6 +10,7 @@
 
 	<!-- Compressed Styles -->
 	<link href="css/slides.min.css" rel="stylesheet" type="text/css">
+	<link rel="icon" type="image/x-icon" href="./favicon.ico">
 
 	<!-- Custom Styles -->
 	<!-- <link href="css/custom.css" rel="stylesheet" type="text/css"> -->
@@ -87,8 +88,6 @@
 
 	<!-- Fonts and Material Icons -->
 	<link rel="stylesheet" as="font" href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,600,800|Montserrat:200|Montserrat:400|Material+Icons"/>
-	<link rel="icon" type="image/x-icon" href="./favicon.ico">
-	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon-180x180.png">　
 	<style type="text/css">
 		.slides,
 		.slides p {
@@ -318,10 +317,9 @@
       <li><a href="https://itunes.apple.com/jp/app/snowcookie-smart-ski-tracker/id1317036227?mt=8" target="_blank">App Store</a></li>
     </ul>
     <ul class="subMenu small ae-3">
-      <li class="opacity-8"><a href="https://snowcookiesports.com/pages/about-us" target="_blank">About Us</a></li>
-      <li class="opacity-8"><a href="https://snowcookiesports.com/pages/terms-conditions" target="_blank">Terms of Service</a></li>
-      <li class="opacity-8"><a href="https://snowcookiesports.com/pages/policy" target="_blank">Privacy Policy</a></li>
-      <li class="opacity-8"><a href="https://snowcookiesports.com/pages/customer-support" target="_blank">Contact Us</a></li>
+      <li class="opacity-8"><a href="./profile.html#team">チーム</a></li>
+      <li class="opacity-8"><a href="./profile.html#profile">プロフィール</a></li>
+      <li class="opacity-8"><a href="./profile.html#contact">お問い合わせ</a></li>
     </ul>
     <ul class="social ae-4">
       <li class="opacity-8"><a href="https://www.facebook.com/snowcookiejapan" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
