--- a/profile.html
+++ b/profile.html
@@ -507,7 +507,7 @@
               </ul>
               <div class="label ae-8"><label class="opacity-5" for="message55">メッセージ</label></div>
               <textarea class="left wide ae-9" id="message55" type="text" name="message" placeholder="メッセージ" required></textarea>
-              <button type="submit" class="button wide blue ae-10 margin-top-2 cropBottom" data-success-text="Done!" data-success-class="message-sent" name="button">メッセージ送信</button>
+              <button type="submit" class="button wide blue ae-10 margin-top-2 cropBottom" data-success-text="送信完了" data-success-class="メッセージが送信されました" name="button">メッセージ送信</button>
             </form>
           </div>
         </div>
