--- a/index copy.html
+++ b/index copy.html
@@ -318,8 +318,7 @@
     </ul>
     <ul class="subMenu small ae-3">
       <li class="opacity-8"><a href="./profile.html#team">チーム</a></li>
-      <li class="opacity-8"><a href="./profile.html#profile">プロフィール</a></li>
-      <li class="opacity-8"><a href="./profile.html#contact">お問い合わせ</a></li>
+      <li class="opacity-8"><a href="./profile.html#contact">コンタクト</a></li>
     </ul>
     <ul class="social ae-4">
       <li class="opacity-8"><a href="https://www.facebook.com/snowcookiejapan" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
