--- a/profile.html
+++ b/profile.html
@@ -318,8 +318,7 @@
     </ul>
     <ul class="subMenu small ae-3">
       <li class="opacity-8"><a href="#team">チーム</a></li>
-      <li class="opacity-8"><a href="#profile">プロフィール</a></li>
-      <li class="opacity-8"><a href="#contact">お問い合わせ</a></li>
+      <li class="opacity-8"><a href="#contact">コンタクト</a></li>
     </ul>
     <ul class="social ae-4">
       <li class="opacity-8"><a href="https://www.facebook.com/snowcookiejapan" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
@@ -431,7 +430,7 @@
 </section>
 
 <!-- Slide  -->
-<section data-title="プロフィール" class="slide fade-6 kenBurns" id="profile">
+<section data-title="コンタクト" class="slide fade-6 kenBurns" id="contact">
   <div class="content">
     <div class="container">
       <div class="wrap">
@@ -484,40 +483,6 @@
   <div class="background" style="background-image:url(assets/img/background/147A6467-1.jpg)"></div>
 </section>
 
-<!-- Slide -->
-<section data-title="お問い合わせ" class="slide fade-6 kenBurns" id="contact">
-  <div class="content">
-    <div class="container">
-      <div class="wrap">
-
-        <h1 class="ae-1">お問い合わせ</h1>
-        <p class="ae-2"><span class="opacity-8">ご質問・ご不明点については、こちらのフォームよりお問い合わせください</span></p>
-        <div class="form-55">
-          <div class="pad shadow left selected ae-3">
-            <form action="ajax-email.php" id="contact-form" method="post" class="slides-form wide" data-ajax-form="true">
-              <ul class="grid noSpaces">
-                <li class="col-6-12 form-55-input-1">
-                  <div class="label ae-5"><label class="left opacity-5" for="name55">お名前</label></div>
-                  <input class="ae-6" id="name55" type="name" name="name" placeholder="お名前" required/>
-                </li>
-                <li class="col-6-12 form-55-input-2">
-                  <div class="label ae-5"><label class="left opacity-5" for="email55">メールアドレス</label></div>
-                  <input class="ae-6" id="email55" type="email" name="email" placeholder="メールアドレス" required/>
-                </li>
-              </ul>
-              <div class="label ae-8"><label class="opacity-5" for="message55">メッセージ</label></div>
-              <textarea class="left wide ae-9" id="message55" type="text" name="message" placeholder="メッセージ" required></textarea>
-              <button type="submit" class="button wide blue ae-10 margin-top-2 cropBottom" data-success-text="送信完了" data-success-class="メッセージが送信されました" name="button">メッセージ送信</button>
-            </form>
-          </div>
-        </div>
-        
-      </div>
-    </div>
-  </div>  
-  <div class="background" style="background-image:url(assets/img/background/img-3-4.jpg)"></div>
-</section>
-
 
 <!-- Panel Bottom -->
 <nav class="panel bottom">
@@ -528,8 +493,7 @@
     <div class="right">
       <ul class="menu uppercase trim">
         <li><a href="#team">チーム</a></li>
-        <li><a href="#profile">プロフィール</a></li>
-        <li><a href="#contact">お問い合わせ</a></li>
+        <li><a href="#contact">コンタクト</a></li>
         <li class="cropRight"><a href="https://www.facebook.com/snowcookiejapan" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
         <li class="cropRight"><a href="https://twitter.com/ridesnowcookie" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
         <li class="cropRight"><a href="https://www.instagram.com/snowcookiejapan" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></li>
