--- a/profile.html
+++ b/profile.html
@@ -336,8 +336,8 @@
       <div class="wrap">
       
         <div class="fix-10-12 toCenter">
-          <h1 class="ae-1">Team Snowcookie</h1>
-          <p class="ae-2"><span class="opacity-8">フレッシュパウダーとテクノロジーをこよなく愛するスキーヤー集団</span></p>
+          <h1 class="ae-1">Team snowcookie</h1>
+          <p class="ae-2"><span class="opacity-8">フレッシュパウダースノーとテクノロジーをこよなく愛するスキーヤー集団</span></p>
         </div>
         <div class="fix-12-12">  
           <ul class="grid fixedSpaces grid-69 equal equalMobile" data-slider-id="69" >
