--- a/index copy.html
+++ b/index copy.html
@@ -37,12 +37,12 @@
 	    //custom messages
 	    $.ajaxChimp.translations.custom = {
 	      'submit': 'Submitting...',
-	      0: 'ご登録ください有難うございます。後日通知送信させていただきます',
+	      0: 'ご登録ください有難うございます。後日通知ご連絡させていただきます',
 	      1: 'メールアドレスを入力してください',
 	      2: 'メールアドレスには@を含む必要があります',
-	      3: 'The domain portion of the email address is invalid (the portion after the @: )',
-	      4: 'The username portion of the email address is invalid (the portion before the @: )',
-	      5: 'This email address looks fake or invalid. Please enter a real email address'
+	      3: 'メールアドレスのドメインが適切ではありません',
+	      4: '@より前のメールアドレスが正しくありません',
+	      5: 'このメールアドレスは正しくありません。正しいメールアドレスを入力してください'
 	    }
 
 	    //js function on success
