--- a/profile.html
+++ b/profile.html
@@ -316,7 +316,7 @@
 <nav class="sidebar animated blue" data-sidebar-id="animated">
   <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
   <div class="content">
-    <a href="#" class="logo ae-1"><svg width="140" height="36"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./index.html#logo-icon"></use></svg></a>
+    <a href="./index.html" class="logo ae-1"><svg width="140" height="36"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./index.html#logo-icon"></use></svg></a>
     <ul class="mainMenu margin-top-3 ae-2">
       <li><a href="./index.html#about">snowcookieについて</a></li>
       <li><a href="./index.html#spec">機能･スペック</a></li>
