--- a/index.html
+++ b/index.html
@@ -326,8 +326,7 @@
       <li><a href="https://itunes.apple.com/jp/app/snowcookie-smart-ski-tracker/id1317036227?mt=8" target="_blank">App Store</a></li>
     </ul>
     <ul class="subMenu small ae-3">
-      <li class="opacity-8"><a href="./profile.html#team">チーム</a></li>
-      <li class="opacity-8"><a href="./profile.html#contact">コンタクト</a></li>
+      <li class="opacity-8"><a href="./profile.html">プロフィール</a></li>
     </ul>
     <ul class="social ae-4">
       <li class="opacity-8"><a href="https://www.facebook.com/snowcookiejapan" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
