--- a/profile.html
+++ b/profile.html
@@ -316,18 +316,13 @@
 <nav class="sidebar animated blue" data-sidebar-id="animated">
   <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
   <div class="content">
-    <a href="./index.html" class="logo ae-1"><svg width="140" height="36"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./index.html#logo-icon"></use></svg></a>
+    <a href="index.html" class="logo ae-1"><svg width="140" height="36"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-icon"></use></svg></a>
     <ul class="mainMenu margin-top-3 ae-2">
-      <li><a href="./index.html#about">snowcookieについて</a></li>
-      <li><a href="./index.html#spec">機能･スペック</a></li>
-      <li><a href="./index.html#setup">セットアップ</a></li>
-      <li><a href="./index.html#pledge">CF支援プラン</a></li>
-      <li><a href="./index.html#form">プレオーダー通知登録</a></li>
-      <li><a href="https://itunes.apple.com/jp/app/snowcookie-smart-ski-tracker/id1317036227?mt=8" target="_blank">App Store</a></li>
+      <li><a href="#team">開発運営チーム</a></li>
+      <li><a href="#contact">コンタクト</a></li>
     </ul>
     <ul class="subMenu small ae-3">
-      <li class="opacity-8"><a href="#team">チーム</a></li>
-      <li class="opacity-8"><a href="#contact">コンタクト</a></li>
+      <li class="opacity-8"><a href="./index.html">ホーム</a></li>
     </ul>
     <ul class="social ae-4">
       <li class="opacity-8"><a href="https://www.facebook.com/snowcookiejapan" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
@@ -501,7 +496,7 @@
     </div>
     <div class="right">
       <ul class="menu uppercase trim">
-        <li><a href="#team">チーム</a></li>
+        <li><a href="#team">開発運営チーム</a></li>
         <li><a href="#contact">コンタクト</a></li>
         <li class="cropRight"><a href="https://www.facebook.com/snowcookiejapan" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
         <li class="cropRight"><a href="https://twitter.com/ridesnowcookie" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
