--- a/profile.html
+++ b/profile.html
@@ -450,7 +450,7 @@
               </div>
               <div class="fix-3-12 equalElement">
                 <h6 class="uppercase opacity-8 margin-top-3 margin-bottom-2">HQ</h6>
-                <p class="tiny opacity-8">Rue de la Jambe-Ducommun 8B 2400, Le Locle Switzerland</p>
+                <p class="tiny opacity-8">Hardturmstrasse 161, 8005 Zürich, Switzerland</p>
               </div>
             </li>
             <li class="col-4-12 ae-4">
