--- a/profile.html
+++ b/profile.html
@@ -456,11 +456,11 @@
             <li class="col-4-12 ae-4">
               <div class="fix-3-12 equalElement">
                 <h6 class="uppercase opacity-8 margin-top-3 margin-bottom-2">日本語ウェブサイト</h6>
-                <p class="tiny"><a class="opacity-8" href="http://jp.snowcookiesports.com">http://jp.snowcookiesports.com</a></p>
+                <p class="tiny"><a class="opacity-8" href="https://jp.snowcookiesports.com">jp.snowcookiesports.com</a></p>
               </div>
               <div class="fix-3-12 equalElement">
                 <h6 class="uppercase opacity-8 margin-top-3 margin-bottom-2">グローバルウェブサイト	</h6>
-                <p class="tiny"><a class="opacity-8" href="http://snowcookiesports.com">http://snowcookiesports.com</a></p>
+                <p class="tiny"><a class="opacity-8" href="https://snowcookiesports.com">snowcookiesports.com</a></p>
               </div>
             </li>
             <li class="col-4-12 ae-5">
