--- a/profile.html
+++ b/profile.html
@@ -34,6 +34,26 @@
 	  gtag('config', 'UA-124745798-1');
 	</script>
 
+	<!-- Facebook Pixel Code -->
+	<script>
+	 !function(f,b,e,v,n,t,s)
+	 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+	 n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+	 if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version=‘2.0’;
+	 n.queue=[];t=b.createElement(e);t.async=!0;
+	 t.src=v;s=b.getElementsByTagName(e)[0];
+	 s.parentNode.insertBefore(t,s)}(window, document,‘script’,
+	 ’https://connect.facebook.net/en_US/fbevents.js');
+	 fbq(‘init’, ‘342931629784701’);
+	 fbq(‘track’, ‘PageView’);
+	</script>
+	<noscript><img height=“1” width=“1" style=“display:none”
+	 src=“https://www.facebook.com/tr?id=342931629784701&ev=PageView&noscript=1
+	https://www.facebook.com/tr?id=342931629784701&ev=PageView&noscript=1
+	"
+	/></noscript>
+	<!-- End Facebook Pixel Code -->
+
 	<!-- Mail Chimp Integration -->
 	<script src="https://cdn.rawgit.com/scdoshi/jquery-ajaxchimp/47c0beaa/jquery.ajaxchimp.min.js"></script>
 	<script>
