--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
                   <li class="opacity-8">スマートスキーシステム<br>カラー：ブラック</li>
                 </ul>
               </div>
-              <a href="https://www.amazon.co.jp/dp/B07J6N2933?th=1" target="_blank" class="button blue  wide cropSides cropBottom ae-7">Amazonで購入</a>
+              <a href="https://amzn.to/2OgHsh3" target="_blank" class="button blue  wide cropSides cropBottom ae-7">Amazonで購入</a>
             </li>
             <li class="col-3-12 ae-4">
               <h3>snowcookie<br>Yellow Editon</h3>
@@ -742,7 +742,7 @@
                   <li class="opacity-8">スマートスキーシステム<br>カラー：イエロー</li>
                 </ul>
               </div>
-              <a href="https://www.amazon.co.jp/dp/B07J6MYJC1?th=1" target="_blank" class="button blue  wide cropSides cropBottom ae-8">Amazonで購入</a>
+              <a href="https://amzn.to/2A4dx2U" target="_blank" class="button blue  wide cropSides cropBottom ae-8">Amazonで購入</a>
             </li>
             <li class="col-3-12 ae-5">
               <h3>snowcookie<br>Swiss Black Editon</h3>
