--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 	<!-- Page Title -->
 	<title>Snowcookie - AIスマートスキーシステム</title>
+	<meta name="description" content="スキー上達を加速し、楽しみ方をアップグレードする、3Dスキートラッカー" />
+	
 
 	<!-- Compressed Styles -->
 	<link href="css/slides.min.css" rel="stylesheet" type="text/css">
