--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
               <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
                 <ul class="p tiny">
                   <img class="ae-3 fromCenter margin-bottom-3 margin-top-1 done" src="assets/img/intheBox_allYEL_@0,5x.png" height="158" alt="Yellow Edition">
-                  <li class="opacity-8">スマートスキーシステム<br>カラー：イエロー<br>旧カラーのため特別価格販売</li>
+                  <li class="opacity-8">スマートスキーシステム<br>カラー：イエロー<br><br>(旧カラーのため特別価格販売)</li>
                 </ul>
               </div>
               <a href="https://amzn.to/2A4dx2U" target="_blank" class="button blue  wide cropSides cropBottom ae-8">Amazonで購入（残り39）</a>
