--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
       <li><a href="#spec">機能･スペック</a></li>
       <li><a href="#setup">セットアップ</a></li>
       <li><a href="#product">製品ラインナップ</a></li>
+      <li><a href="#faq">よくある質問</a></li>
       <li><a href="https://itunes.apple.com/jp/app/snowcookie-smart-ski-tracker/id1317036227?mt=8" target="_blank">App Store</a></li>
     </ul>
     <ul class="subMenu small ae-3">
@@ -779,6 +780,43 @@
   <div class="background" style="background-image:url(assets/img/background/39913936_2147463812161139_8607010480025763840_n.png)"></div>
 </section>
 
+<!-- Slide #16 -->
+<section data-title="よくある質問" class="slide fade-6 kenBurns" id="faq">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
+
+        <div class="fix-12-12">
+
+          <div class="fix-6-12 toLeft left">
+            <h1 class="ae-1">よくあるご質問</h1>
+          </div>
+
+          <ul class="grid margin-top-4">
+            <li class="col-4-12 left ae-3">
+              <h3>マウンターはスキー取付け後に交換可能ですか？</h3>
+              <p class="tiny opacity-6">強力な粘着テープで固定されるため、取り外して別のスキーに付け替えることはできません。別売のマウンターキットをご購入いただくことで、複数台スキーでSnowcookieをお楽しみいただけます</p>
+              <p class="tiny opacity-6"><a href="https://snowcookiesports.com/products/snowcookie-mounting-plates-2x" target="_blank">> マウンターキット購入ページ</a></p>
+            </li>
+            <li class="col-4-12 left ae-4">
+              <h3>センサータグを紛失した場合、別途購入可能ですか？</h3>
+              <p class="tiny opacity-6">スキー板に取付したセンサータグを紛失してしまった場合、下記ページよりセンサー単品でご購入いただくことができます。センサータグのカラーによる機能差はございません</p>
+              <p class="tiny opacity-6"><a href="https://snowcookiesports.com/products/1x-snowcookie-replacement-sensor-black?variant=20417170735222" target="_blank">> センサータグ購入ページ</a></p>
+            </li>
+            <li class="col-4-12 left ae-5">
+              <h3>ハーネスサイズはどのサイズを選択すればいいですか？</h3>
+              <p class="tiny opacity-6">お客様の胸囲サイズに合わせてハーネスサイズをお選びください</p>
+              <p class="tiny opacity-6">胸囲80-90cm → Sサイズ<br>胸囲90-100cm → M/Lサイズ<br>胸囲100-110cm → XLサイズ</p>
+            </li>
+          </ul>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+  <div class="background" style="background-image:url(assets/img/IMG_3639-1.jpg)"></div>
+</section>
+
 
 <!-- Panel Bottom -->
 <nav class="panel bottom">
@@ -792,6 +830,7 @@
         <li><a href="#spec">機能･スペック</a></li>
         <li><a href="#setup">セットアップ</a></li>
         <li><a href="#product">製品ラインナップ</a></li>
+        <li><a href="#faq">よくある質問</a></li>
         <li class="cropRight"><a href="https://www.facebook.com/snowcookiejapan" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
         <li class="cropRight"><a href="https://twitter.com/ridesnowcookie" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
         <li class="cropRight"><a href="https://www.instagram.com/snowcookiejapan" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></li>
