--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/147A6389-1.jpg)"></div>
+  <div class="background" style="background-image:url(assets/img/background/slide_03.jpg)"></div>
 </section>
 
 <!-- Slide 3 -->
@@ -381,7 +381,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/snowcookie-68.jpg)"></div>
+  <div class="background" style="background-image:url(assets/img/background/147A6192-1.jpg)"></div>
 </section>
 
 <!-- Slide 4 -->
@@ -414,7 +414,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/147A1638-1-RecoveredBL_@0,5x.jpg"></div>
+  <div class="background" style="background-image:url(assets/img/background/snowcookie-51.jpg)"></div>
 </section>
 
 <!-- Slide 5 -->
@@ -478,7 +478,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/snowcookie-82r.jpg"></div>
+  <div class="background" style="background-image:url(assets/img/background/snowcookie-82r.jpg)"></div>
 </section>
 
 <!-- Slide 6 -->
@@ -734,7 +734,7 @@
                   <li class="opacity-8">スマートスキーシステム<br>カラー：ブラック</li>
                 </ul>
               </div>
-              <a href="https://amzn.to/2OgHsh3" target="_blank" class="button blue  wide cropSides cropBottom ae-7">Amazonで購入（残り26）</a>
+              <a href="https://amzn.to/2OgHsh3" target="_blank" class="button blue  wide cropSides cropBottom ae-7">Amazonで購入</a>
             </li>
             <li class="col-3-12 ae-4">
               <h3>snowcookie<br>Yellow Editon</h3>
@@ -745,7 +745,7 @@
                   <li class="opacity-8">スマートスキーシステム<br>カラー：イエロー<br><br>(旧カラーのため特別価格販売)</li>
                 </ul>
               </div>
-              <a href="https://amzn.to/2A4dx2U" target="_blank" class="button blue  wide cropSides cropBottom ae-8">Amazonで購入（残り39）</a>
+              <a href="https://amzn.to/2A4dx2U" target="_blank" class="button blue  wide cropSides cropBottom ae-8">Amazonで購入</a>
             </li>
             <li class="col-3-12 ae-5">
               <h3>snowcookie<br>Swiss Black Editon</h3>
@@ -823,6 +823,7 @@
   <div class="sections desktop">
     <div class="left">
       <a href="https://itunes.apple.com/jp/app/snowcookie-smart-ski-tracker/id1317036227?mt=8" target="_blank" class="button hollow"><img src="assets/img/appstore.jpg" width="160" height="60"/></a>
+      <img class="button hollow" src="assets/img/swissmade-2_white.png" height="60" target="_blank">
     </div>
     <div class="right">
       <ul class="menu uppercase trim">
