--- a/profile.html
+++ b/profile.html
@@ -473,8 +473,16 @@
                 <h6 class="uppercase opacity-8 margin-top-3 margin-bottom-2">HQ</h6>
                 <p class="tiny opacity-8">Hardturmstrasse 161, 8005 Zürich, Switzerland</p>
               </div>
+              <div class="fix-3-12 equalElement">
+                <h6 class="uppercase opacity-8 margin-top-3 margin-bottom-2">製造拠点</h6>
+                <p class="tiny opacity-8">Rue de la Jambe-Ducommun 8B, 2400 Le Locle, Switzerland</p>
+              </div>
             </li>
             <li class="col-4-12 ae-4">
+              <div class="fix-3-12 equalElement">
+                <h6 class="uppercase opacity-8 margin-top-3 margin-bottom-2">R&Dラボ</h6>
+                <p class="tiny opacity-8">Francuska 182/15, 40-507 Katowice, Poland</p>
+              </div>
               <div class="fix-3-12 equalElement">
                 <h6 class="uppercase opacity-8 margin-top-3 margin-bottom-2">日本語ウェブサイト</h6>
                 <p class="tiny"><a class="opacity-8" href="https://jp.snowcookiesports.com">jp.snowcookiesports.com</a></p>
@@ -486,8 +494,12 @@
             </li>
             <li class="col-4-12 ae-5">
               <div class="fix-3-12 equalElement">
-                <h6 class="uppercase opacity-8 margin-top-3 margin-bottom-2">コンタクト</h6>
+                <h6 class="uppercase opacity-8 margin-top-3 margin-bottom-2">国内展開に関するご連絡</h6>
                 <p class="tiny"><a class="opacity-8" href="mailto:yoichiro@snowcookiesports.com">yoichiro@snowcookiesports.com</a></p>
+              </div>
+              <div class="fix-3-12 equalElement">
+                <h6 class="uppercase opacity-8 margin-top-3 margin-bottom-2">Global Contact</h6>
+                <p class="tiny"><a class="opacity-8" href="mailto:yoichiro@snowcookiesports.com">office@snowcookiesports.com</a></p>
               </div>
               <div class="fix-3-12 equalElement">
                 <h6 class="uppercase opacity-8 margin-top-3 margin-bottom-2">Stay in touch</h6>
@@ -514,6 +526,7 @@
   <div class="sections desktop">
     <div class="left">
       <a href="https://itunes.apple.com/jp/app/snowcookie-smart-ski-tracker/id1317036227?mt=8" target="_blank" class="button hollow"><img src="assets/img/appstore.jpg" width="160" height="60"/></a>
+      <img class="button hollow" src="assets/img/swissmade-2_white.png" height="60" target="_blank">
     </div>
     <div class="right">
       <ul class="menu uppercase trim">
