--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
     <div class="container">
       <div class="wrap">
           <div class="embedVideo popupContent">
-            <iframe src="https://www.youtube.com/embed/q_2ZAPPOMA8?rel=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/x7s2HNZS2dY?rel=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
       </div>
     </div>
@@ -664,7 +664,7 @@
     <div class="container">
       <div class="wrap">
           <div class="embedVideo popupContent">
-            <iframe src="https://www.youtube.com/embed/aWvkPgfK4zk?rel=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/GBJIjTzjl3Q?rel=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
       </div>
     </div>
@@ -703,7 +703,7 @@
     <div class="container">
       <div class="wrap">
           <div class="embedVideo popupContent">
-            <iframe src="https://www.youtube.com/embed/WE0tXORyhb8?rel=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/qflTzFQPdg4?rel=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
       </div>
     </div>
@@ -829,7 +829,7 @@
         <li class="cropRight"><a href="https://www.facebook.com/snowcookiejapan" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
         <li class="cropRight"><a href="https://twitter.com/ridesnowcookie" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
         <li class="cropRight"><a href="https://www.instagram.com/snowcookiejapan" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></li>
-        <li class="cropRight"><a href="https://www.youtube.com/channel/UCT289AMSz905O0hE7-OoOBw" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#youtube"></use></svg></a></li>
+        <li class="cropRight"><a href="https://www.youtube.com/channel/UCAxQW6jTEg52WnPJ_0Kkyew" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#youtube"></use></svg></a></li>
       </ul>
     </div>
   </div>
