--- a/ambassador.html
+++ b/ambassador.html
@@ -322,7 +322,10 @@
           <ul class="flex grid-80 fixedSpaces equal reverse">
             <li class="col-6-12">
               <div class="box-80 padding-4 equalElement left ae-3 rounded">
-                <p class="tiny ae-5"><span class="tiny opacity-8">木曾路はすべて山の中である。あるところは岨づたいに行く崖の道であり、あるところは数十間の深さに臨む木曾川の岸であり、あるところは山の尾をめぐる谷の入り口である。一筋の街道はこの深い森林地帯を貫いていた。名高い桟も、蔦のかずらを頼みにしたような危い場処ではなくなって、徳川時代の末にはすでに渡ることのできる橋であった。</span></p>
+              	<p class="ae-5"><span class="opacity-8"><b>欲しいデータがリアルタイムで分かる！</b></span></p>
+                <p class="tiny ae-5"><span class="tiny opacity-8">最近は滑走距離・滑走時間・滑走本数・高低差などが分かるアプリが増えていますが、Snowcookieはカービング量・ポジション・左右前後バランスなど上達に役立つ専門的なデータが数多く取れるので、情報量ではそれらのアプリを遥かに凌駕しています。今まで欲しくても手に入らなかった様々な情報が簡単に手に入っちゃいます！仲間同士でデータを比べるも良し、自分のスキルアップに役立てるも良し、とにかく役立つアイテムです！</span></p>
+                <p class="ae-5"><span class="opacity-8"><b>3Dグラフィックが素晴らしい！</b></span></p>
+                <p class="tiny ae-5"><span class="tiny opacity-8">３Dマップデータを使用し、立体的に山全体の雰囲気や自分の滑走ラインが一目で分かります。ゲレンデコースはもちろん、景色や山肌に至る細部まで忠実に再現されているので見ているだけで楽しくなります。おすすめは滑走ライン追随モード。自分が滑ったラインを自分目線で再現する事が出来るので、ゲレンデの最高の思い出がよみがえります！</span></p>
                 <div class="margin-top-5 ae-6">
                   <h3>栗山 太樹・栗山 未来</h3>
                   <p class="tiny opacity-8 cropBottom">GALA湯沢, SAJナショナルデモンストレーター</p>
