--- a/index.html
+++ b/index.html
@@ -790,12 +790,12 @@
             <li class="col-4-12 left ae-3">
               <h3>マウンターはスキー取付け後に交換可能ですか？</h3>
               <p class="tiny opacity-6">強力な粘着テープで固定されるため、取り外して別のスキーに付け替えることはできません。別売のマウンターキットをご購入いただくことで、複数台スキーでSnowcookieをお楽しみいただけます</p>
-              <p class="tiny opacity-6"><a href="https://shop.snowcookiesports.com/products/snowcookie-mounting-plates-2x" target="_blank">> マウンターキット購入ページ</a></p>
+              <p class="tiny opacity-6"><a href="https://www.amazon.co.jp/dp/B07LDHBNCL" target="_blank">> マウンターキット購入ページ</a></p>
             </li>
             <li class="col-4-12 left ae-4">
               <h3>センサータグを紛失した場合、別途購入可能ですか？</h3>
               <p class="tiny opacity-6">スキー板に取付したセンサータグを紛失してしまった場合、下記ページよりセンサー単品でご購入いただくことができます。センサータグのカラーによる機能差はございません</p>
-              <p class="tiny opacity-6"><a href="https://shop.snowcookiesports.com/products/1x-snowcookie-replacement-sensor-black?variant=20417170735222" target="_blank">> センサータグ購入ページ</a></p>
+              <p class="tiny opacity-6"><a href="https://www.amazon.co.jp/dp/B07LDG9ZN5" target="_blank">> センサータグ購入ページ</a></p>
             </li>
             <li class="col-4-12 left ae-5">
               <h3>ハーネスサイズはどのサイズを選択すればいいですか？</h3>
