--- a/index.html
+++ b/index.html
@@ -736,34 +736,34 @@
               <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
                 <ul class="p tiny">
                   <img class="ae-3 fromCenter margin-bottom-3 margin-top-1 done" src="assets/img/intheBox_allYEL_@0,5x.png" height="158" alt="Yellow Edition">
-                  <li class="opacity-8">スマートスキーシステム<br>カラー：イエロー<br><br>(旧カラーのため特別価格販売)</li>
+                  <li class="opacity-8">スマートスキーシステム<br>カラー：イエロー</li>
                 </ul>
               </div>
               <a href="https://amzn.to/2A4dx2U" target="_blank" class="button blue  wide cropSides cropBottom ae-8">Amazonで購入</a>
             </li>
             <li class="col-3-12 ae-5">
-              <h3>snowcookie<br>Swiss Black Editon</h3>
-              <div class="price ae-7"><span class="currency">¥</span>120,000</div>
+              <h3>snowcookie<br>Spare Sensor</h3>
+              <div class="price ae-7"><span class="currency">¥</span>11,000</div>
               <div class="margin-top-3 margin-bottom-3 equalElement ae-8">
                 <ul class="p tiny">
-                  <img class="ae-3 fromCenter margin-bottom-3 margin-top-1 done" src="assets/img/intheBox_allBL_suit@0,5x.png" height="158" alt="Yellow Edition">
-                  <li class="opacity-8">カラー：ブラック ×1</li>
-                  <li class="opacity-8">カスタムレーシングスーツ(Snowcookie用チェストポケット&iPhone用ポケット付き)</li>
+                  <img class="ae-3 fromCenter margin-bottom-3 margin-top-1 done" src="assets/img/spare_black-8_2048x2048.png" height="158" alt="Spare Sensor">
+                  <li class="opacity-8">センサータグ ×1</li>
+                  <li class="opacity-8">カラー：ブラック/イエロー</li>
                 </ul>
               </div>
-              <a  class="button  wide cropSides cropBottom ae-9">間もなく販売開始</a>
+              <a href="https://www.amazon.co.jp/dp/B07LDG9ZN5" target="_blank" class="button blue  wide cropSides cropBottom ae-7">Amazonで購入</a>
             </li>
             <li class="col-3-12 ae-5">
-              <h3>snowcookie<br>Yellow Editon</h3>
-              <div class="price ae-7"><span class="currency">¥</span>108,000</div>
+              <h3>snowcookie<br>Mount Plate Set</h3>
+              <div class="price ae-7"><span class="currency">¥</span>5,500</div>
               <div class="margin-top-3 margin-bottom-3 equalElement ae-8">
                 <ul class="p tiny">
-                  <img class="ae-3 fromCenter margin-bottom-3 margin-top-1 done" src="assets/img/intheBox_allYEL_suit@0,5x.png" height="158" alt="Swiss Black Edition">
-                  <li class="opacity-8">カラー：イエロー ×1</li>
-                  <li class="opacity-8">カスタムレーシングスーツ(Snowcookie用チェストポケット&iPhone用ポケット付き)</li>
+                  <img class="ae-3 fromCenter margin-bottom-3 margin-top-1 done" src="assets/img/Artboard_12-8_2048x2048.png" height="158" alt="Mount Plate Set">
+                  <li class="opacity-8">マウントプレートセット ×2</li>
+                  <li class="opacity-8">2セット（計4枚のプレート同梱）</li>
                 </ul>
               </div>
-              <a class="button wide cropSides cropBottom ae-9">間もなく販売開始</a>
+              <a href="https://www.amazon.co.jp/dp/B07LDHBNCL" target="_blank" class="button blue  wide cropSides cropBottom ae-7">Amazonで購入</a>
             </li>
           </ul>
         </div> 
@@ -789,8 +789,8 @@
           <ul class="grid margin-top-4">
             <li class="col-4-12 left ae-3">
               <h3>マウンターはスキー取付け後に交換可能ですか？</h3>
-              <p class="tiny opacity-6">強力な粘着テープで固定されるため、取り外して別のスキーに付け替えることはできません。別売のマウンターキットをご購入いただくことで、複数台スキーでSnowcookieをお楽しみいただけます</p>
-              <p class="tiny opacity-6"><a href="https://www.amazon.co.jp/dp/B07LDHBNCL" target="_blank">> マウンターキット購入ページ</a></p>
+              <p class="tiny opacity-6">強力な粘着テープで固定されるため、取り外して別のスキーに付け替えることはできません。別売のマウントプレートセットをご購入いただくことで、複数台スキーでSnowcookieをお楽しみいただけます</p>
+              <p class="tiny opacity-6"><a href="https://www.amazon.co.jp/dp/B07LDHBNCL" target="_blank">> マウントプレートセット購入ページ</a></p>
             </li>
             <li class="col-4-12 left ae-4">
               <h3>センサータグを紛失した場合、別途購入可能ですか？</h3>
