--- a/index.html
+++ b/index.html
@@ -286,6 +286,8 @@
       <li><a href="https://itunes.apple.com/jp/app/snowcookie-smart-ski-tracker/id1317036227?mt=8" target="_blank">App Store</a></li>
     </ul>
     <ul class="subMenu small ae-3">
+      <li class="opacity-8"><a href="./ambassador.html">アンバサダー</a></li>
+      <li class="opacity-8"><a href="./news.html">ニュース / お知らせ</a></li>
       <li class="opacity-8"><a href="./profile.html">プロフィール</a></li>
     </ul>
     <ul class="social ae-4">
@@ -817,7 +819,7 @@
   <div class="sections desktop">
     <div class="left">
       <a href="https://itunes.apple.com/jp/app/snowcookie-smart-ski-tracker/id1317036227?mt=8" target="_blank" class="button hollow"><img src="assets/img/appstore.jpg" width="160" height="60"/></a>
-      <img class="button hollow" src="assets/img/swissmade-2_white.png" height="60" target="_blank">
+      <img class="button hollow" src="assets/img/swissmade-2_white.png" height="60">
     </div>
     <div class="right">
       <ul class="menu uppercase trim">
