--- a/news.html
+++ b/news.html
@@ -306,7 +306,7 @@
 
       	<div class="fix-7-12">
           <h1 class="ae-1">snowcookie updates</h1>
-          <p class="ae-2"><span class="opacity-6">国内でのsnowcookie製品展開に関するニュース、海外での取り組み紹介などをご紹介させていただきます</span></p><br>
+          <p class="ae-2"><span class="opacity-6">国内でのsnowcookie製品展開に関するニュース、海外での取り組みなどをご紹介させていただきます</span></p><br>
         </div>
 
         <div class="fix-12-12 ae-1">
