--- a/profile.html
+++ b/profile.html
@@ -344,6 +344,8 @@
     </ul>
     <ul class="subMenu small ae-3">
       <li class="opacity-8"><a href="./index.html">ホーム</a></li>
+      <li class="opacity-8"><a href="./ambassador.html">アンバサダー</a></li>
+      <li class="opacity-8"><a href="./news.html">ニュース / お知らせ</a></li>
     </ul>
     <ul class="social ae-4">
       <li class="opacity-8"><a href="https://www.facebook.com/snowcookiejapan" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
