--- a/ambassador.html
+++ b/ambassador.html
@@ -6,7 +6,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 
 	<!-- Page Title -->
-	<title>Snowcookie - AIスマートスキーシステム</title>
+	<title>アンバサダー - Snowcookie AIスマートスキーシステム</title>
 	<meta name="description" content="スキー上達を加速し、楽しみ方をアップグレードする、3Dスキートラッカー" />
 
 	<!-- Compressed Styles -->
@@ -283,6 +283,7 @@
     </ul>
     <ul class="subMenu small ae-3">
       <li class="opacity-8"><a href="./index.html">ホーム</a></li>
+      <li class="opacity-8"><a href="./tutorial.html">利用ガイド</a></li>
       <li class="opacity-8"><a href="./news.html">ニュース / お知らせ</a></li>
       <li class="opacity-8"><a href="./profile.html">プロフィール</a></li>
     </ul>
@@ -435,6 +436,7 @@
   <div class="sections desktop">
     <div class="left">
       <a href="https://itunes.apple.com/jp/app/snowcookie-smart-ski-tracker/id1317036227?mt=8" target="_blank" class="button hollow"><img src="assets/img/appstore.jpg" width="160" height="60"/></a>
+      <a href="https://amzn.to/2OgHsh3" target="_blank" class="button hollow"><img src="assets/img/amazonbutton.jpg" width="111" height="60"/></a>
       <img class="button hollow" src="assets/img/swissmade-2_white.png" height="60" target="_blank">
     </div>
     <div class="right">
