--- a/news.html
+++ b/news.html
@@ -357,6 +357,49 @@
   <div class="background" style="background-image:url(assets/img/background/IMG_3382-1-Recovered.jpg)"></div>
 </section>
 
+<!-- Slide -->
+<section class="slide fade-7 kenBurns">
+  <div class="content">
+    <div class="container">
+      <div class="wrap padding-top-phablet-5">
+
+        <div class="fix-10-12 toCenter">
+          <h1 class="ae-1">Meet with us and try it on!</h1>
+          <p class="ae-2 margin-bottom-3"><span class="opacity-8">展示会･イベント出展やデモ体験イベント開催スケジュール</span></p>
+        </div>
+        <div class="fix-12-12">
+          <div class="frame-97 ae-3 padding-top-3 padding-bottom-3 margin-top-2">
+            <p class="white calendar-97 absolute"><span class="center uppercase block bold month">feb</span><span class="number regular">22</span></p>
+            <h2 class="small align-left cropBottom inline-block padding-top-1">
+              <span class="light margin-left-10 margin-left-phablet-0 title-group">Slush Tokyo 2019</span>
+              <span class="regular dislocation">Tokyo, Japan</span>
+              <a href="https://tokyo.slush.org" target="_blank" class="button blue gradient button-buy-97">イベントページ</a>
+            </h2>
+          </div>
+          <div class="frame-97 ae-4 padding-bottom-3 margin-top-2">
+            <p class="white calendar-97 absolute"><span class="center uppercase block bold month">jan</span><span class="number regular">9</span></p>
+            <h2 class="small align-left cropBottom inline-block padding-top-1">
+              <span class="light margin-left-10 margin-left-phablet-0 title-group">CES 2019</span>
+              <span class="regular dislocation">Las Vegas, USA</span>
+              <a href="https://www.ces.tech" target="_blank" class="button blue gradient button-buy-97">イベントページ</a>
+            </h2>
+          </div>
+          <div class="frame-97 ae-5 padding-bottom-3 margin-top-2">
+            <p class="white calendar-97 absolute"><span class="center uppercase block bold month">dec</span><span class="number regular">4</span></p>
+            <h2 class="small align-left cropBottom inline-block padding-top-1">
+              <span class="light margin-left-10 margin-left-phablet-0 title-group">Slush 2018</span>
+              <span class="regular dislocation">Helsinki, Finland</span>
+              <a href="https://www.slush.org" target="_blank" class="button blue gradient button-buy-97">イベントページ</a>
+            </h2>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <div class="background" style="background-image:url(assets/img/background/147A6247.jpg)"></div>
+</section>
+
 
 
 <!-- Panel Bottom -->
