--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                   <li class="opacity-8">スマートスキーシステム<br>カラー：ブラック</li>
                 </ul>
               </div>
-              <a href="https://amzn.to/2OgHsh3" target="_blank" class="button blue  wide cropSides cropBottom ae-7">Amazonで購入</a>
+              <a href="https://amzn.to/2OgHsh3" target="_blank" class="button blue gradient wide cropSides cropBottom ae-7">Amazonで購入</a>
             </li>
             <li class="col-3-12 ae-4">
               <h3>snowcookie<br>Yellow Editon</h3>
@@ -646,7 +646,7 @@
                   <li class="opacity-8">スマートスキーシステム<br>カラー：イエロー</li>
                 </ul>
               </div>
-              <a href="https://amzn.to/2A4dx2U" target="_blank" class="button blue  wide cropSides cropBottom ae-8">Amazonで購入</a>
+              <a href="https://amzn.to/2A4dx2U" target="_blank" class="button blue gradient wide cropSides cropBottom ae-8">Amazonで購入</a>
             </li>
             <li class="col-3-12 ae-5">
               <h3>snowcookie<br>Spare Sensor</h3>
@@ -658,7 +658,7 @@
                   <li class="opacity-8">カラー：ブラック/イエロー</li>
                 </ul>
               </div>
-              <a href="https://www.amazon.co.jp/dp/B07LDG9ZN5" target="_blank" class="button blue  wide cropSides cropBottom ae-7">Amazonで購入</a>
+              <a href="https://www.amazon.co.jp/dp/B07LDG9ZN5" target="_blank" class="button blue gradient wide cropSides cropBottom ae-7">Amazonで購入</a>
             </li>
             <li class="col-3-12 ae-5">
               <h3>snowcookie<br>Mount Plate Set</h3>
@@ -670,7 +670,7 @@
                   <li class="opacity-8">2セット（計4枚のプレート同梱）</li>
                 </ul>
               </div>
-              <a href="https://www.amazon.co.jp/dp/B07LDHBNCL" target="_blank" class="button blue  wide cropSides cropBottom ae-7">Amazonで購入</a>
+              <a href="https://www.amazon.co.jp/dp/B07LDHBNCL" target="_blank" class="button blue gradient wide cropSides cropBottom ae-7">Amazonで購入</a>
             </li>
           </ul>
         </div> 
