--- a/news.html
+++ b/news.html
@@ -282,7 +282,9 @@
   <div class="content">
     <a href="index.html" class="logo ae-1"><svg width="140" height="36"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-icon"></use></svg></a>
     <ul class="mainMenu margin-top-3 ae-2">
-      <li><a href="#news">ニュース / お知らせ</a></li>
+      <li><a href="#news">ニュース</a></li>
+      <li><a href="#events">イベント情報</a></li>
+      <li><a href="#newsletter">ニュースレター</a></li>
     </ul>
     <ul class="subMenu small ae-3">
       <li class="opacity-8"><a href="./index.html">ホーム</a></li>
@@ -306,7 +308,7 @@
     <div class="container">
       <div class="wrap padding-top-phablet-5">
 
-      	<div class="fix-7-12">
+      	<div class="fix-10-12">
           <h1 class="ae-1">snowcookie updates</h1>
           <p class="ae-2"><span class="opacity-6">国内でのsnowcookie製品展開に関するニュース、海外での取り組みなどをご紹介させていただきます</span></p><br>
         </div>
@@ -359,7 +361,7 @@
 </section>
 
 <!-- Slide -->
-<section class="slide fade-7 kenBurns">
+<section data-title="イベント情報" class="slide fade-7 kenBurns" id="events">
   <div class="content">
     <div class="container">
       <div class="wrap padding-top-phablet-5">
@@ -402,7 +404,7 @@
 </section>
 
 <!-- Slide -->
-<section class="slide fade-6 kenBurns">
+<section data-title="ニュースレター" class="slide fade-6 kenBurns" id="newsletter">
   <div class="content">
     <div class="container">
       <div class="wrap">
@@ -438,7 +440,9 @@
     </div>
     <div class="right">
       <ul class="menu uppercase trim">
-        <li><a href="#news">ニュース / お知らせ</a></li>
+        <li><a href="#news">ニュース</a></li>
+        <li><a href="#events">イベント情報</a></li>
+        <li><a href="#newsletter">ニュースレター</a></li>
         <li class="cropRight"><a href="https://www.facebook.com/snowcookiejapan" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
         <li class="cropRight"><a href="https://twitter.com/ridesnowcookie" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
         <li class="cropRight"><a href="https://www.instagram.com/snowcookiejapan" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></li>
